[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.102"      # error handling
bytes = "1.11.1"        # helps manage buffers
is_executable = "1.0.5"
itertools = "0.14.0"
nom = "8.0.0"
rustyline = "17.0.2"
thiserror = "2.0.18"    # error handling
