[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1"        # error handling
bytes = "1"         # helps manage buffers
is_executable = "1"
itertools = "0.14"
nom = "8"
rustyline = "18"
thiserror = "2"     # error handling

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
rexpect = "0.7"
rand = "0.10"
escargot = "0.5"
